--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
   margin-bottom: 10px;
   padding: 10px;
 }
+h1{
+        text-align: center;
+        font-size:20px;
+      }
+
     @media (min-width: 992px)
     {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
@@ -191,7 +196,4 @@
   padding: 5px;
   background-color: pink;
 }
-      .h1{
-        text-align: center;
-        font-size:20px;
-      }
+      
